ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================

******************************************
CHANGELOG: 22-02-2012  MPB
PXX - change to MSB send first and data scaling + V2 changes

******************************************
CHANGELOG: 11-02-2012  ER
PXX work - change to not stuff the head and tail bytes.

******************************************
CHANGELOG: 07-02-2012  RFT
Audio update to save space. 324 bytes saved

******************************************
CHANGELOG: 06-2-2012  MPB
Fix bug in myeeprom.h - frskyVoltThreshold wrong size

******************************************
CHANGELOG: 04-2-2012  MPB
Flash and RAM saving
Add GPS speed display, with max speed
Add individual cell voltages from FrSky hub 2.0
Text now allows embedded move to X position characters

******************************************
CHANGELOG: 02-02-2012  RFT
Few minor audio updates

******************************************
CHANGELOG: 02-01-2012  RFT
complere rework of audio system.
less firmware space
less cpu usage
please all test before active use.


******************************************
CHANGELOG: 1-28-2012  ER
Light to turn on while booting up.
On sw warning display the out of position switches.

******************************************
CHANGELOG: 1-27-2012  ER
Fix for default sw position menu item.

******************************************
CHANGELOG: 23-1-2012  RFT
Some updates to audio queue to prevent sound overruns 
when playing 'long sounds'

******************************************
CHANGELOG: 22-1-2012  ER
Menu changes for protocols
Enable light on by moving sticks
More elaborate sw warning

******************************************
CHANGELOG: 19-1-2012  & 12-1-2012 MPB
Add PXX and PPM16 protocols